		-The internal CollectionHelper class had a dependency on the .NET 3.5 type HashSet<T>. This dependency
		 is removed and it's now more likely that CuttingEdge.Conditions can be used in .NET 2.0 projects.
		 You'd still need C# 3.0 though. The library has now only one method that you can not call without
		.NET 3.5 installed: the Evaluate(Expression<Func<T, bool>>) method.
		
	Code changes:
		-A TraceListener class called ‘UnitTestTraceListener’ has been added to the UnitTest project and 
		 configured to be the default trace listener in the project's app.config. The trace listener ensures
		 that calls to Debug.Assert(false), Trace.Assert(false), Debug.Fail(), and Trace.Fail(), from within
		 the tested assembly are routed to the Microsoft.VisualStudio.TestTools.UnitTesting.Assert.Fail
		 method. Debug.Assert is now used in the SR.GetStringInternal method.
		-[BREAKING CHANGE] One overload of entry point method 'Ensures' has been removed.
		 The overload Condition.Ensures<T>(T value, string argumentName, string additionalMessage) has been
		 removed. Because of this change, the EnsuresValidator has been adjusted and some unit tests have
		 been removed. The overload has become redundant in version 1.0.2.0, after overload methods where
		 added with a 'conditionDescription' parameter of type string for all extension methods.
	

Version 1.0.3.0 (v1.0 beta 3) 2009-03-15
	General description:
		This released has some breaking changes to allow better support for languages other than C# (VB.NET
		for instance, wasn't supported well). Therefore, the old release is both binary and code incompatible.
		Still, C# users shouldn't expect to make any changes to their code.
	
	Bug Fixes:
		-Added an [Obsolete] attribute to the Equals(object) method of the Validator<T> class. The Equals 
		 method is not meant to be used by framework users and the compiler will now show a warning with the